--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/slick.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/AppleJavaExtensions.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/asm-debug-all.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/jinput.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lwjgl_test.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lwjgl_util_applet.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lwjgl-debug.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/lwjgl/jar/lzma.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse/workspace/squires/lwjgl/jar/slick.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/AppleJavaExtensions.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/asm-debug-all.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/jinput.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl_test.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl_util_applet.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl-debug.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lwjgl.jar"/>
+	<classpathentry kind="lib" path="lwjgl/jar/lzma.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
